# sigil

./: Cargo.toml  license
src/: array.rs  checker.rs  cli.rs  coordinated_killing.rs  driver.rs  interlacing_alloc.rs  lexer.rs  loomed_q.rs  loopbuffer.rs  main.rs  mpsc.rs  parser.rs  reductor.rs  root_alloc.rs  sema.rs  semi_inline_seqv.rs  stable_map.rs  utils.rs
