# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "rusty-sigil"
version = "0.1.0"
edition = "2021"

[build]
rustc-wrapper = "/home/isoosqa/.cargo/bin/sccache"

# [profile.dev]
# rustflags = ["-Zsanitizer=thread"]
# debug = "rr"

[dependencies]
core_affinity = "0.8.0"
# regex = "1.8.3"
# amd64_timer = "1.3.0"
# loom = "0.5.6"

# [target.'cfg(loom)'.dependencies]
# loom = "0.5"

polling = "2.8.0"
regex = "1.8.4"

